--- a/home_page.html
+++ b/home_page.html
@@ -133,6 +133,23 @@
                 updateCount();
             });
         });
+
+        document.addEventListener('DOMContentLoaded', function() {
+            let lastScrollTop = 0;
+            const header = document.querySelector('header');
+
+            window.addEventListener('scroll', function() {
+                let scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+                if (scrollTop > lastScrollTop) {
+                    // Scroll down
+                    header.classList.add('hidden');
+                } else {
+                    // Scroll up
+                    header.classList.remove('hidden');
+                }
+                lastScrollTop = scrollTop;
+            });
+});
     </script>
 
     </section>
