them giao dien cua Course Section

--- a/home_page.html
+++ b/home_page.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/ac_style.css" />
 </head>
 <body>
     <!--Start header-->
@@ -137,7 +138,380 @@
 
     </section>
 
-    <!--COURSES SECTION-->
+    <div id="main">
+        <section class="first-place">
+          <div class="four-skills">
+            <div class="txt-icon">
+              <div class="icon-plc">
+                <div class="circle-skill">
+                  <img
+                    class="icon-img"
+                    src="img/Best_Stimulations.png"
+                    alt="Best Stimulations"
+                  />
+                </div>
+              </div>
+              <h5 class="title-skill">Best Stimulations</h5>
+            </div>
+            <div class="txt-icon">
+              <div class="icon-plc">
+                <div class="circle-skill">
+                  <img
+                    class="icon-img"
+                    src="img/Group_Seminars.png"
+                    alt="Group Seminars"
+                  />
+                </div>
+              </div>
+              <h5 class="title-skill">Group Seminars</h5>
+            </div>
+            <div class="txt-icon">
+              <div class="icon-plc">
+                <div class="circle-skill">
+                  <img
+                    class="icon-img"
+                    src="img/Analysed_Syllabus.png"
+                    alt="Analysed Syllabus"
+                  />
+                </div>
+              </div>
+              <h5 class="title-skill">Analysed Syllabus</h5>
+            </div>
+            <div class="txt-icon">
+              <div class="icon-plc">
+                <div class="circle-skill">
+                  <img
+                    class="icon-img"
+                    src="img/Pratical_Training.png"
+                    alt="Practical Training"
+                  />
+                </div>
+              </div>
+              <h5 class="title-skill">Practical Training</h5>
+            </div>
+          </div>
+        </section>
+  
+        <div class="second-place">
+          <div class="all-course">
+            <div class="about-course">
+              <div class="title">
+                <section>
+                  <div class="title-place">
+                    <h2>
+                      <span class="heading-title">COURSES</span>
+                      <div class="line-course"></div>
+                    </h2>
+                  </div>
+                </section>
+              </div>
+              <div class="about-courselist">
+                <section>
+                  <div class="about-place">
+                    <div class="title-splace">
+                      <h3>
+                        <span class="about-title">About Courses</span>
+                      </h3>
+                    </div>
+                    <div class="content-splace">
+                      <p class="content-about">
+                        Student Registration and Administration Nemo enim ipsam
+                        voluptatem quia voluptas sit atur aut odit aut fugit, sed
+                        quia consequuntur magni res eos qui ratione voluptatem
+                        sequi nesciunt.
+                      </p>
+                    </div>
+                    <div class="content-splace">
+                      <p class="content-about">
+                        There are many variations of passages of Lorem Ipsum
+                        available, but the majority have suffered alteration in
+                        some form, by injected humour, or randomised believable.
+                      </p>
+                    </div>
+                    <div class="btn-view">
+                      <a href="#" class="btn-viewac">
+                        <span class="btn-viewac-bold" >VIEW ALL COURSES</span>
+                      </a>
+                    </div>
+                  </div>
+                </section>
+              </div>
+            </div>
+  
+            <div class="btn-scroll">
+              <section>
+                <section>
+                  <div class="button-pn">
+                    <div class="btn-prev">
+                      <a href="#" class="Bprev"> &#8249; </a>
+                    </div>
+                    <div class="btn-next">
+                      <a href="#" class="Bnext"> &#8250; </a>
+                    </div>
+                  </div>
+                </section>
+                <div class="scroll-course">
+                  <div class="a-course">
+                    <div class="img-crs">
+                      <img class="img-detail" src="img/About_Courses-1.jpg" />
+                      <div class="overlay">
+                        <div class="centered">
+                          <div class="btn-center">
+                            <a href="#" class="btn-view-course">
+                              <span>VIEW COURSE</span>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="details-crs">
+                      <div class="cost">
+                        <div class="title-cost">
+                          <span class="txt-cost">Free</span>
+                        </div>
+                      </div>
+                      <div class="courselist">
+                        <h5>
+                          <a class="link-course" href="#">Power Electronics</a>
+                        </h5>
+                      </div>
+                      <div class="courselist-data">
+                        <p class="tag">
+                          <a class="link-tag" href="#">Education</a>
+                        </p>
+                        <div class="line-btw"></div>
+                        <p class="curriculum">7 Curriculum</p>
+                      </div>
+                      <div class="line-list"></div>
+                      <div class="courselist-bottom">
+                        <div class="duration">
+                          <div class="img-clock">
+                            <img class="clock" src="img/clock.png" />
+                            <span class="time-clock"> 1d 1h 50m </span>
+                          </div>
+                        </div>
+                      </div>
+                      <span class="vote-place">
+                        <img class="vote-star" src="img/star-1.png" />
+                        <img class="vote-star" src="img/star-1.png" />
+                        <img class="vote-star" src="img/star-1.png" />
+                        <img class="vote-star" src="img/star-2.png" />
+                        <img class="vote-star" src="img/star-3.png" />
+                        <span class="vote-num"
+                          >(<strong>9</strong> votes, average:
+                          <strong>4.11</strong> out of 5, <strong>rated</strong>)</span
+                        >
+                      </span>
+                      <div class="hiden-vote">
+                        <span class="hiden-star">1 Star</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="a-course">
+                    <div class="img-crs">
+                      <img class="img-detail" src="img/About_Courses-2.jpg" />
+                      <div class="overlay">
+                        <div class="centered">
+                          <div class="btn-center">
+                            <a href="#" class="btn-view-course">
+                              <span>VIEW COURSE</span>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="details-crs">
+                      <div class="cost">
+                        <div class="title-cost">
+                          <span class="txt-cost">Free</span>
+                        </div>
+                      </div>
+                      <div class="courselist">
+                        <h5>
+                          <a class="link-course" href="#"
+                            >Introduction to Calculus</a
+                          >
+                        </h5>
+                      </div>
+                      <div class="courselist-data">
+                        <p class="tag">
+                          <a class="link-tag" href="#">Mathematics</a>
+                        </p>
+                        <div class="line-btw"></div>
+                        <p class="curriculum">5 Curriculum</p>
+                      </div>
+                      <div class="line-list"></div>
+                      <div class="courselist-bottom">
+                        <div class="duration">
+                          <div class="img-clock">
+                            <img class="clock" src="img/clock.png" />
+                            <span class="time-clock"> 1m 22d 22h </span>
+                          </div>
+                        </div>
+                      </div>
+                      <span class="vote-place">
+                        <img class="vote-star" src="img/star-1.png" />
+                        <img class="vote-star" src="img/star-1.png" />
+                        <img class="vote-star" src="img/star-1.png" />
+                        <img class="vote-star" src="img/star-2.png" />
+                        <img class="vote-star" src="img/star-3.png" />
+                        <span class="vote-num"
+                          >(<strong>10</strong> votes, average:
+                          <strong>4.70</strong> out of 5, <strong>rated</strong>)</span
+                        >
+                      </span>
+                      <div class="hiden-vote">
+                        <span class="hiden-star"></span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="a-course">
+                    <div class="img-crs">
+                      <img class="img-detail" src="img/About_Courses-3.jpg" />
+                      <div class="overlay">
+                        <div class="centered">
+                          <div class="btn-center">
+                            <a href="#" class="btn-view-course">
+                              <span>VIEW COURSE</span>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="details-crs">
+                      <div class="cost">
+                        <div class="title-cost">
+                          <span class="txt-cost">Free</span>
+                        </div>
+                      </div>
+                      <div class="courselist">
+                        <h5>
+                          <a class="link-course" href="#"
+                            >Basic Laws and Policies</a
+                          >
+                        </h5>
+                      </div>
+                      <div class="courselist-data">
+                        <p class="tag">
+                          <a class="link-tag" href="#">Law</a>
+                        </p>
+                        <div class="line-btw"></div>
+                        <p class="curriculum">5 Curriculum</p>
+                      </div>
+                      <div class="line-list"></div>
+                      <div class="courselist-bottom">
+                        <div class="duration">
+                          <div class="img-clock">
+                            <img class="clock" src="img/clock.png" />
+                            <span class="time-clock"> 20d 18h 30m </span>
+                          </div>
+                        </div>
+                      </div>
+                      <span class="vote-place">
+                        <img class="vote-star" src="img/star-1.png" />
+                        <img class="vote-star" src="img/star-1.png" />
+                        <img class="vote-star" src="img/star-1.png" />
+                        <img class="vote-star" src="img/star-2.png" />
+                        <img class="vote-star" src="img/star-3.png" />
+                        <span class="vote-num"
+                        span class="vote-num"
+                        >(<strong>8</strong> votes, average:
+                        <strong>3.57</strong> out of 5, <strong>rated</strong>)</span
+                      >
+                      </span>
+                      <div class="hiden-vote">
+                        <span class="hiden-star"></span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="a-course">
+                    <div class="img-crs">
+                        <img class="img-detail" src="img/About_Courses-4.jpg" />
+                      <div class="overlay">
+                        <div class="centered">
+                          <div class="btn-center">
+                            <a href="#" class="btn-view-course">
+                              <span>VIEW COURSE</span>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="details-crs">
+                      <div class="cost">
+                        <div class="title-cost">
+                          <span class="txt-cost">$50</span>
+                        </div>
+                      </div>
+                      <div class="courselist">
+                        <h5>
+                          <a class="link-course" href="#"
+                            >Healthcare Delivery</a
+                          >
+                        </h5>
+                      </div>
+                      <div class="courselist-data">
+                        <p class="tag">
+                          <a class="link-tag" href="#">Health</a>
+                        </p>
+                        <div class="line-btw"></div>
+                        <p class="curriculum">4 Curriculum</p>
+                      </div>
+                      <div class="line-list"></div>
+                      <div class="courselist-bottom">
+                        <div class="duration">
+                          <div class="img-clock">
+                            <img class="clock" src="img/clock.png" />
+                            <span class="time-clock"> 20d 18h 30m </span>
+                          </div>
+                        </div>
+                      </div>
+                      <span class="vote-place">
+                        <img class="vote-star" src="img/star-1.png" />
+                        <img class="vote-star" src="img/star-1.png" />
+                        <img class="vote-star" src="img/star-1.png" />
+                        <img class="vote-star" src="img/star-2.png" />
+                        <img class="vote-star" src="img/star-3.png" />
+                        <span class="vote-num"
+                          >(<strong>7</strong> votes, average:
+                          <strong>3.57</strong> out of 5, <strong>rated</strong>)</span
+                        >
+                      </span>
+                      <div class="hiden-vote">
+                        <span class="hiden-star"></span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </section>
+            </div>
+          </div>
+        </div>
+  
+        <section class="third-place">
+          <div class="view-course">
+            <div class="swiper-slide">
+              <img
+                class="img-swiper"
+                src="img/Learn_Design.jpg"
+                alt="Learn Design"
+              />
+              <img
+                class="img-swiper"
+                src="img/Print_fever.jpg"
+                alt="Print Fever"
+              />
+              <img
+                class="img-swiper"
+                src="img/Photography_courses.jpg"
+                alt="Photography Courses"
+              />
+            </div>
+          </div>
+        </section>
+      </div>
+  
+      <script src="js/ac_script.js"></script>
 
     <!--BLOG SECTION-->
 
