da chinh sua lai Course section

--- a/home_page.html
+++ b/home_page.html
@@ -181,6 +181,8 @@
 
     </section>
 
+    <!-- Course section -->
+    <div class="container-course-implement">
     <div id="main">
         <section class="first-place">
           <div class="four-skills">
@@ -553,8 +555,7 @@
           </div>
         </section>
       </div>
-  
-      <script src="js/ac_script.js"></script>
+    </div>
 
     <!--BLOG SECTION-->
 
@@ -562,5 +563,6 @@
 
     <!--FOOTER-->
 <script src="script.js"></script>
+<script src="js/ac_script.js"></script>
 </body>
 </html>
