Cap nhap css section Course section

--- a/home_page.html
+++ b/home_page.html
@@ -241,7 +241,7 @@
           <div class="all-course">
             <div class="about-course">
               <div class="title">
-                <section>
+                <section class="for-course">
                   <div class="title-place">
                     <h2>
                       <span class="heading-title">COURSES</span>
@@ -251,7 +251,7 @@
                 </section>
               </div>
               <div class="about-courselist">
-                <section>
+                <section class="for-course">
                   <div class="about-place">
                     <div class="title-splace">
                       <h3>
@@ -284,8 +284,8 @@
             </div>
   
             <div class="btn-scroll">
-              <section>
-                <section>
+              <section class="for-course">
+                <section class="for-course">
                   <div class="button-pn">
                     <div class="btn-prev">
                       <a href="#" class="Bprev"> &#8249; </a>
