Da chinh lai nut next + prev scroll course va da them nut back to top

--- a/home_page.html
+++ b/home_page.html
@@ -15,6 +15,14 @@
     <link rel="stylesheet" href="css/ac_style.css" />
 </head>
 <body>
+    <!-- Back to top button -->
+    <section class="for-course">
+      <div class="button-top">
+        <div class="btn-back-top">
+          <a href="#" class="Btop"> <p class="back-top"><i class="arrow-top up"></i></p> </a>
+        </div>
+      </div>
+    </section>
     <!--Start header-->
     <header>
         <a href="#" class="logo">
@@ -288,10 +296,10 @@
                 <section class="for-course">
                   <div class="button-pn">
                     <div class="btn-prev">
-                      <a href="#" class="Bprev"> &#8249; </a>
+                      <a href="#" class="Bprev"> <p class="section-for-course"><i class="arrow-course left"></i></p> </a>
                     </div>
                     <div class="btn-next">
-                      <a href="#" class="Bnext"> &#8250; </a>
+                      <a href="#" class="Bnext"> <p class="section-for-course"><i class="arrow-course right"></i></p> </a>
                     </div>
                   </div>
                 </section>
