--- a/home_page.html
+++ b/home_page.html
@@ -16,6 +16,18 @@
 
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <link rel="stylesheet" href="css/BlogAndUpcomingEvents.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!--Google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <!--Animate fad-up-->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
     <!-- Back to top button -->
@@ -1055,7 +1067,297 @@
     </div>
 
     <!--BLOG SECTION-->
+    <div class="container-fluid" data-aos="fade-up">
+      <div class="blogTitle">BLOG</div>
+      <div class="line"></div>
+      <div class="row">
+          <div class="col-xl-3 col-lg-5 col-md-6 col-sm-12 col-12 colFirst">
+              <div class="row">
+                  <div class="wrapper-blog">
+                      <div class="blogImageAndContent">
+                          <div class="blogImage">
+                              <img src="./images/blog12.jpg" class="blogImage1">
+                          </div>
+                          <div class="blogContent">
+                              <p class="blogContentParagraph">
+                                  There are many variations of passages of Lorem Ipsum available, but the majority
+                                  have
+                                  suffered
+                                  alteration in some form, by injected humour, or randomised...
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
 
+              <div class="row">
+                  <div class="col-xl-4 col-lg-3 col-md-3 col-sm-2 col-3">
+                      <div class="blogDate">
+                          <p class="blogDateContent"> 30 Thu </p>
+                          <a class="icon-format" href="#">
+                              <i class="bi bi-file-earmark-text-fill"></i>
+                          </a>
+                      </div>
+                  </div>
+                  <div class="col-xl-8 col-lg-6 col-md-6 col-sm-5 col-7">
+                      <div class="blogGroup">
+                          <h4 class="blogGroupTitle">
+                              <a href="#" title="Permalink to Contrary to popular" class="blogGroupTitleLink">Contrary
+                                  to popular</a>
+                          </h4>
+                          <a href="#" title="View all posts by dtlmsele" class="blogGroupAuthor">dtlmsele </a>|
+                          <br>
+                          <div class="blogGroupTag">
+                              <i class="bi bi-bookmark-fill"></i>
+                              <a href="#" rel="tag" class="tag1">blog</a>,
+                              <a href="#" rel="tag" class="tag2">chart</a>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-xl-3 col-lg-5 col-md-6 col-sm-12 col-12 colSecond">
+              <div class="row">
+                  <div class="wrapper-blog">
+                      <div class="blogImageAndContent">
+                          <div class="blogImage">
+                              <img src="./images/blog7.jpg" class="blogImage1">
+                          </div>
+                          <div class="blogContent">
+                              <p class="blogContentParagraph">
+                                  There are many variations of passages of Lorem Ipsum available, but the majority
+                                  have
+                                  suffered
+                                  alteration in some form, by injected humour, or randomised...
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-xl-4 col-lg-3 col-md-3 col-sm-2 col-3 wrapper-blog-date">
+                      <div class="blogDate">
+                          <p class="blogDateContent"> 30 Thu </p>
+                          <a class="icon-format" href="#">
+                              <i class="bi bi-file-earmark-text-fill"></i>
+                          </a>
+                      </div>
+                  </div>
+                  <div class="col-xl-8 col-lg-6 col-md-6 col-sm-5 col-7">
+                      <div class="blogGroup">
+                          <h4 class="blogGroupTitle1">
+                              <a href="#" title="Permalink to Omnis voluptas assumenda"
+                                  class="blogGroupTitleLink">Omnis voluptas assumenda</a>
+                          </h4>
+                          <a href="#" title="View all posts by dtlmsele" class="blogGroupAuthor">dtlmsele </a>|
+                          <br>
+                          <div class="blogGroupTag">
+                              <i class="bi bi-bookmark-fill"></i>
+                              <a href="#" rel="tag" class="tag1">blog</a>,
+                              <a href="#" rel="tag" class="tag2">chart</a>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-xl-3 col-lg-5 col-md-6 col-sm-12 col-12 colThird">
+              <div class="row">
+                  <div class="wrapper-blog">
+                      <div class="blogImageAndContent">
+                          <div class="blogImage">
+                              <img src="./images/blog11.jpg" class="blogImage1">
+                          </div>
+                          <div class="blogContent">
+                              <p class="blogContentParagraph">
+                                  There are many variations of passages of Lorem Ipsum available, but the majority
+                                  have
+                                  suffered
+                                  alteration in some form, by injected humour, or randomised...
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-md-4 wrapper-blog-date">
+                      <div class="blogDate">
+                          <p class="blogDateContent"> 30 Thu </p>
+                          <a class="icon-format" href="#">
+                              <i class="bi bi-file-earmark-text-fill"></i>
+                          </a>
+                      </div>
+                  </div>
+                  <div class="col-md-8">
+                      <div class="blogGroup">
+                          <h4 class="blogGroupTitle1">
+                              <a href="#" title="Permalink to Piece of classical" class="blogGroupTitleLink">Piece of
+                                  classical</a>
+                          </h4>
+                          <a href="#" title="View all posts by dtlmsele" class="blogGroupAuthor">dtlmsele </a>|
+                          <br>
+                          <div class="blogGroupTag">
+                              <i class="bi bi-bookmark-fill"></i>
+                              <a href="#" rel="tag" class="tag1">blog</a>,
+                              <a href="#" rel="tag" class="tag2">chart</a>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4"></div>
+      </div>
+      <br><br><br><br>
+      <div class="row">
+          <div class="blogElementImage">
+              <div class="blogElement">
+                  <div class="col-2 blog">
+                      <div class="iconAndName">
+                          <div class="blogIconElement">
+                              <span class="iconHTMLSpan">
+                                  <svg aria-hidden="true" class="e-font-icon-svg e-fab-html5" viewBox="0 0 384 512"
+                                      xmlns="http://www.w3.org/2000/svg">
+                                      <path
+                                          d="M0 32l34.9 395.8L191.5 480l157.6-52.2L384 32H0zm308.2 127.9H124.4l4.1 49.4h175.6l-13.6 148.4-97.9 27v.3h-1.1l-98.7-27.3-6-75.8h47.7L138 320l53.5 14.5 53.7-14.5 6-62.2H84.3L71.5 112.2h241.1l-4.4 47.7z">
+                                      </path>
+                                  </svg>
+                              </span>
+                          </div>
+                          <br>
+                          <h5>HTML</h5>
+                      </div>
+                  </div>
+                  <div class="col-2 blog">
+                      <div class="iconAndName">
+                          <div class="blogIconElement">
+                              <span class="iconCSSSpan">
+                                  <svg aria-hidden="true" class="e-font-icon-svg e-fab-css3" viewBox="0 0 512 512"
+                                      xmlns="http://www.w3.org/2000/svg">
+                                      <path
+                                          d="M480 32l-64 368-223.3 80L0 400l19.6-94.8h82l-8 40.6L210 390.2l134.1-44.4 18.8-97.1H29.5l16-82h333.7l10.5-52.7H56.3l16.3-82H480z">
+                                      </path>
+                                  </svg>
+                              </span>
+                          </div>
+                          <br>
+                          <h5>CSS</h5>
+                      </div>
+                  </div>
+                  <div class="col-2 blog">
+                      <div class="iconAndName">
+                          <div class="blogIconElement">
+                              <span class="iconAndroidSpan">
+                                  <svg aria-hidden="true" class="e-font-icon-svg e-fab-android" viewBox="0 0 576 512"
+                                      xmlns="http://www.w3.org/2000/svg">
+                                      <path
+                                          d="M420.55,301.93a24,24,0,1,1,24-24,24,24,0,0,1-24,24m-265.1,0a24,24,0,1,1,24-24,24,24,0,0,1-24,24m273.7-144.48,47.94-83a10,10,0,1,0-17.27-10h0l-48.54,84.07a301.25,301.25,0,0,0-246.56,0L116.18,64.45a10,10,0,1,0-17.27,10h0l47.94,83C64.53,202.22,8.24,285.55,0,384H576c-8.24-98.45-64.54-181.78-146.85-226.55">
+                                      </path>
+                                  </svg>
+                              </span>
+                          </div>
+                          <br>
+                          <h5>Android</h5>
+                      </div>
+                  </div>
+                  <div class="col-2 blog">
+                      <div class="iconAndName">
+                          <div class="blogIconElement">
+                              <span class="iconPhotoshopSpan">
+                                  <svg aria-hidden="true" class="e-font-icon-svg e-far-paper-plane"
+                                      viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                                      <path
+                                          d="M440 6.5L24 246.4c-34.4 19.9-31.1 70.8 5.7 85.9L144 379.6V464c0 46.4 59.2 65.5 86.6 28.6l43.8-59.1 111.9 46.2c5.9 2.4 12.1 3.6 18.3 3.6 8.2 0 16.3-2.1 23.6-6.2 12.8-7.2 21.6-20 23.9-34.5l59.4-387.2c6.1-40.1-36.9-68.8-71.5-48.9zM192 464v-64.6l36.6 15.1L192 464zm212.6-28.7l-153.8-63.5L391 169.5c10.7-15.5-9.5-33.5-23.7-21.2L155.8 332.6 48 288 464 48l-59.4 387.3z">
+                                      </path>
+                                  </svg>
+                              </span>
+                          </div>
+                          <br>
+                          <h5>Photoshop</h5>
+                      </div>
+                  </div>
+                  <div class="col-2 blog">
+                      <div class="iconAndName">
+                          <div class="blogIconElement">
+                              <span class="iconjQuerySpan">
+                                  <svg aria-hidden="true" class="e-font-icon-svg e-far-paper-plane"
+                                      viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                                      <path
+                                          d="M440 6.5L24 246.4c-34.4 19.9-31.1 70.8 5.7 85.9L144 379.6V464c0 46.4 59.2 65.5 86.6 28.6l43.8-59.1 111.9 46.2c5.9 2.4 12.1 3.6 18.3 3.6 8.2 0 16.3-2.1 23.6-6.2 12.8-7.2 21.6-20 23.9-34.5l59.4-387.2c6.1-40.1-36.9-68.8-71.5-48.9zM192 464v-64.6l36.6 15.1L192 464zm212.6-28.7l-153.8-63.5L391 169.5c10.7-15.5-9.5-33.5-23.7-21.2L155.8 332.6 48 288 464 48l-59.4 387.3z">
+                                      </path>
+                                  </svg>
+                              </span>
+                          </div>
+                          <br>
+                          <h5>jQuery</h5>
+                      </div>
+                  </div>
+                  <div class="col-2 blog">
+                      <div class="iconAndName">
+                          <div class="blogIconElement">
+                              <span class="iconRubySpan">
+                                  <svg aria-hidden="true" class="e-font-icon-svg e-far-paper-plane"
+                                      viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                                      <path
+                                          d="M440 6.5L24 246.4c-34.4 19.9-31.1 70.8 5.7 85.9L144 379.6V464c0 46.4 59.2 65.5 86.6 28.6l43.8-59.1 111.9 46.2c5.9 2.4 12.1 3.6 18.3 3.6 8.2 0 16.3-2.1 23.6-6.2 12.8-7.2 21.6-20 23.9-34.5l59.4-387.2c6.1-40.1-36.9-68.8-71.5-48.9zM192 464v-64.6l36.6 15.1L192 464zm212.6-28.7l-153.8-63.5L391 169.5c10.7-15.5-9.5-33.5-23.7-21.2L155.8 332.6 48 288 464 48l-59.4 387.3z">
+                                      </path>
+                                  </svg>
+                              </span>
+                          </div>
+                          <br>
+                          <h5>Ruby</h5>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <br><br><br>
+      <div class="upcomingEvent">
+          <div class="row">
+              <div class="col">
+                  <div class="eventTitleAndLine">
+                      <h2>UPCOMING EVENTS</h2>
+                      <div class="line1"></div>
+                  </div>
+              </div>
+              <div class="col"></div>
+              <div class="col">
+                  <div class="eventArrowButton">
+                      <div class="eventButtonLeft">
+                          <svg aria-hidden="true" class="e-font-icon-svg e-fas-arrow-left" viewBox="0 0 448 512"
+                              xmlns="http://www.w3.org/2000/svg">
+                              <path
+                                  d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z">
+                              </path>
+                          </svg>
+                      </div>
+                      <div class="eventButtonRight">
+                          <svg aria-hidden="true" class="e-font-icon-svg e-fas-arrow-right" viewBox="0 0 448 512"
+                              xmlns="http://www.w3.org/2000/svg">
+                              <path
+                                  d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z">
+                              </path>
+                          </svg>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="row">
+              <div class="col colEvent">
+                  <div class="eventContent">
+                      <div class="eventContentImage">
+                          <img src="./images/event.jpg" alt="">
+                      </div>
+                      <h2><a href="#">Welcoming 25th Batch</a></h2>
+                      <p>
+                          <span class="tribe-event-date-start">December 12, 2024 @ 8:00 am</span> - <span class="tribe-event-date-end">December 13, 2025 @ 5:00 pm</span>
+                      </p>
+                      <p>
+                          Peppard Hill, United States
+                      </p>
+                  </div>
+              </div>
+              <div class="col"></div>
+          </div>
+      </div>
     <!--UPCOMING EVENTS-->
 
     <!--FOOTER-->
@@ -1121,5 +1423,9 @@
   </footer>
 <script src="script.js"></script>
 <script src="js/ac_script.js"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+   AOS.init();
+</script>
 </body>
 </html>
