--- a/home_page.html
+++ b/home_page.html
@@ -1076,7 +1076,7 @@
                   <div class="wrapper-blog">
                       <div class="blogImageAndContent">
                           <div class="blogImage">
-                              <img src="./images/blog12.jpg" class="blogImage1">
+                              <img src="./img/blog12.jpg" class="blogImage1">
                           </div>
                           <div class="blogContent">
                               <p class="blogContentParagraph">
@@ -1121,7 +1121,7 @@
                   <div class="wrapper-blog">
                       <div class="blogImageAndContent">
                           <div class="blogImage">
-                              <img src="./images/blog7.jpg" class="blogImage1">
+                              <img src="./img/blog7.jpg" class="blogImage1">
                           </div>
                           <div class="blogContent">
                               <p class="blogContentParagraph">
@@ -1165,7 +1165,7 @@
                   <div class="wrapper-blog">
                       <div class="blogImageAndContent">
                           <div class="blogImage">
-                              <img src="./images/blog11.jpg" class="blogImage1">
+                              <img src="./img/blog11.jpg" class="blogImage1">
                           </div>
                           <div class="blogContent">
                               <p class="blogContentParagraph">
@@ -1344,7 +1344,7 @@
               <div class="col colEvent">
                   <div class="eventContent">
                       <div class="eventContentImage">
-                          <img src="./images/event.jpg" alt="">
+                          <img src="./img/event.jpg" alt="">
                       </div>
                       <h2><a href="#">Welcoming 25th Batch</a></h2>
                       <p>
