--- a/home_page.html
+++ b/home_page.html
@@ -1134,7 +1134,7 @@
                       </div>
                   </div>
               </div>
-              <div class="row">
+              <div class="row rowSecond">
                   <div class="col-xl-4 col-lg-3 col-md-3 col-sm-2 col-3 wrapper-blog-date">
                       <div class="blogDate">
                           <p class="blogDateContent"> 30 Thu </p>
@@ -1178,7 +1178,7 @@
                       </div>
                   </div>
               </div>
-              <div class="row">
+              <div class="row rowThird">
                   <div class="col-md-4 wrapper-blog-date">
                       <div class="blogDate">
                           <p class="blogDateContent"> 30 Thu </p>
