--- a/home_page.html
+++ b/home_page.html
@@ -1179,7 +1179,7 @@
                   </div>
               </div>
               <div class="row rowThird">
-                  <div class="col-md-4 wrapper-blog-date">
+                  <div class="col-xl-4 col-lg-3 col-md-3 col-sm-2 col-3 wrapper-blog-date">
                       <div class="blogDate">
                           <p class="blogDateContent"> 30 Thu </p>
                           <a class="icon-format" href="#">
@@ -1187,7 +1187,7 @@
                           </a>
                       </div>
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-xl-8 col-lg-6 col-md-6 col-sm-5 col-7">
                       <div class="blogGroup">
                           <h4 class="blogGroupTitle1">
                               <a href="#" title="Permalink to Piece of classical" class="blogGroupTitleLink">Piece of
